Filter LocationIQ suggestions by city
Request more LocationIQ candidates and filter them by detected city before returning suggestions. Adds CANDIDATE_LIMIT=15 and SUGGESTION_LIMIT=5, uses the larger limit in the API call, then filters results via a new liesInCity(...) method that calls CityService.detectCity. Skips invalid/unaligned coordinates (avoids throwing 500 for a single bad result) and limits the returned suggestions to SUGGESTION_LIMIT. This prevents addresses outside the active city (viewbox rectangle spillover) from reaching createReport and causing 400 errors.